--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "cors": "^2.8.5",
     "firebase": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-live-clock": "^5.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "^3.4.1",
     "web-vitals": "^1.1.2"
