--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-live-clock": "^5.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "^3.4.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -55,5 +56,9 @@
     "postcss": "^7.0.39",
     "react-router-dom": "^5.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
