--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "electron-packager .",
     "start-api": "cd api && venv/Scripts/flask run --no-debugger",
     "build": "craco build",
     "test": "craco test",
@@ -58,8 +58,9 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "autoprefixer": "^9.8.8",
-    "electron": "7.0.0",
+    "electron": "^7.0.0",
     "electron-builder": "^22.14.5",
+    "electron-packager": "^15.4.0",
     "postcss": "^7.0.39",
     "react-router-dom": "^5.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
