--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-live-clock": "^5.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "^3.4.1",
+    "sass": "^1.48.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -53,6 +54,7 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "node-sass": "^4.14.1",
     "postcss": "^7.0.39",
     "react-router-dom": "^5.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
